--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ h1 {
     font-size: 3em;
 }
 
+p {
+    font-family: 'Roboto', sans-serif;
+    color: #cccccc;
+}
+
 svg {
     width: 3.5em;
     fill: #cccccc;
