--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,9 @@
 
 
 body {
+    width: 60vw;
     text-align: center;
-    position: absolute;
+    position: relative;
     height: 100vh;
     left: 50%;
     transform: translateX(-50%);
