--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,14 @@ body {
     width: 60vw;
     text-align: center;
     position: relative;
-    height: 100%S;
+    height: 100%;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .main {
     padding-top: 10vh;
-margin: auto;
+    margin: auto;
 }
 
 h1 {
