--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Catamaran:700');
+@import url('https://fonts.googleapis.com/css?family=Catamaran:700|Roboto');
 
 
 body {
