--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Catamaran:700|Roboto" rel="stylesheet">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="{{site.baseurl}}css/main.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/fav.png">
@@ -36,10 +36,10 @@
 <!--Nav for large screens-->
                             <nav class="navWide">
                                 <ul>
-                                    <li><a href="{{site.baseurl}}about.html">About</a></li>
-                                    <li><a href="{{site.baseurl}}who.html">Who</a></li>
-                                    <li><a href="{{site.baseurl}}sponsors.html">Sponsors</a></li>
-                                    <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
+                                    <li><a href="{{site.baseurl}}/about.html">About</a></li>
+                                    <li><a href="{{site.baseurl}}/who.html">Who</a></li>
+                                    <li><a href="{{site.baseurl}}/sponsors.html">Sponsors</a></li>
+                                    <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
                                     
                                 </ul>
                             </nav>
@@ -57,10 +57,10 @@
                                 <ul class="navNarrow">
                                     <li><a  id="nav-toggle" href="#">&#9776;</a></li>
                                     <div id="toggle" class="hide">
-                                    <li><a href="{{site.baseurl}}about.html">About</a></li>
-                                    <li><a href="{{site.baseurl}}who.html">Who</a></li>
-                                    <li><a href="{{site.baseurl}}sponsors.html">Sponsors</a></li>
-                                    <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
+                                    <li><a href="{{site.baseurl}}/about.html">About</a></li>
+                                    <li><a href="{{site.baseurl}}/who.html">Who</a></li>
+                                    <li><a href="{{site.baseurl}}/sponsors.html">Sponsors</a></li>
+                                    <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
                                     </div>
                                 </ul>
                             </nav>
@@ -105,5 +105,5 @@
     </footer>
 </body>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="{{site.baseurl}}menu.js"></script>
+    <script src="{{site.baseurl}}/menu.js"></script>
 </html>
