--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -184,12 +184,12 @@ form {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding: 1em 0 1em 0;
+        margin: 1em 0 1em 0;
     }
 
     .profile {
         background-color: #96ed94;
-        margin-bottom: 20px;
+        margin-bottom: 2em;
         width: 100%;
         border-radius: 50%;
         position: relative;
