--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -176,6 +176,8 @@ form {
         border-radius: 50%;
         width: 100%;
         height: 100%;
+        padding: 0;
+        margin: 0;
 
     }
 
