--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -189,7 +189,7 @@ form {
     .profile {
         background-color: #96ed94;
         margin-bottom: 2em;
-        width: 100%;
+/*        width: 100%;*/
         border-radius: 50%;
         position: relative;
     }
