--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/fav.png">
+  <link rel="icon" type="image/png" href="{{site.baseurl}}/images/fav.png">
     
 </head>
 <body>
