home page link fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <header>
                 <div class="container">
                     <div class="row">
-                        <div class="five columns"><a href="{{site.baseurl}}index.html">SPD New Designers <b>2018</b></a></div>
+                        <div class="five columns"><a href="{{site.baseurl}}/index.html">SPD New Designers <b>2018</b></a></div>
                         <div class="seven columns">
 <!--Nav for large screens-->
                             <nav class="navWide">
