--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,7 +1,7 @@
 
 /*Default layout styles*/
 
-.sponsor {
+.sponsor img{
     width: 100%;
 }
 
@@ -82,6 +82,10 @@ header {
     
     .navNarrow {
         display: none;
+    }
+    
+    .sponsor img{
+    width: 30%;
     }
 }
 
