--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 <!--Nav for large screens-->
                             <nav class="navWide">
                                 <ul>
-                                    <li><a href="{{site.baseurl}}/Projects.html">Projects</a></li>
+                                    <li><a href="{{site.baseurl}}/projects.html">Projects</a></li>
                                     <li><a href="{{site.baseurl}}/who.html">Who</a></li>
                                     <li><a href="{{site.baseurl}}/sponsors.html">Sponsors</a></li>
                                     <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
