--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,11 +36,11 @@
 <!--Nav for large screens-->
                             <nav class="navWide">
                                 <ul>
+                                    <li><a href="{{site.baseurl}}/book.html">Booklet</a></li>
                                     <li><a href="{{site.baseurl}}/projects.html">Projects</a></li>
                                     <li><a href="{{site.baseurl}}/who.html">Who</a></li>
                                     <li><a href="{{site.baseurl}}/sponsors.html">Sponsors</a></li>
                                     <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
-                                    
                                 </ul>
                             </nav>
                         </div>
@@ -57,7 +57,8 @@
                                 <ul class="navNarrow">
                                     <li><a  id="nav-toggle" href="#">&#9776;</a></li>
                                     <div id="toggle" class="hide">
-                                    <li><a href="{{site.baseurl}}/about.html">About</a></li>
+                                    <li><a href="{{site.baseurl}}/book.html">Booklet</a></li>
+                                    <li><a href="{{site.baseurl}}/project.html">projects</a></li>
                                     <li><a href="{{site.baseurl}}/who.html">Who</a></li>
                                     <li><a href="{{site.baseurl}}/sponsors.html">Sponsors</a></li>
                                     <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
