--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
                                     <li><a  id="nav-toggle" href="#">&#9776;</a></li>
                                     <div id="toggle" class="hide">
                                     <li><a href="{{site.baseurl}}/book.html">Booklet</a></li>
-                                    <li><a href="{{site.baseurl}}/projects.html">projects</a></li>
+                                    <li><a href="{{site.baseurl}}/projects.html">Projects</a></li>
                                     <li><a href="{{site.baseurl}}/who.html">Who</a></li>
                                     <li><a href="{{site.baseurl}}/sponsors.html">Sponsors</a></li>
                                     <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
