--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -695,6 +695,104 @@ p {
     background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1751/42585017881_501804e3d7_b.jpg");
 }
 
+/*beni bag*/
+
+.img25 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm2.staticflickr.com/1807/28067772017_0b3795bb60_k.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img25:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1807/28067772017_0b3795bb60_k.jpg");
+}
+
+/*Dan*/
+
+.img26 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm2.staticflickr.com/1764/29063850688_9fc46977d5_b.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img26:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1764/29063850688_9fc46977d5_b.jpg");
+}
+
+/*Fran*/
+
+.img27 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm2.staticflickr.com/1805/28067892717_4b411eb2a1_b.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img27:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1805/28067892717_4b411eb2a1_b.jpg");
+}
+
+/*Jeanet*/
+
+.img28 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm2.staticflickr.com/1834/42887703032_95762ea045_b.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img28:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1834/42887703032_95762ea045_b.jpg");
+}
+
+/*Ollie*/
+
+.img29 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm2.staticflickr.com/1780/41126348740_1f4cdc13eb_b.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img29:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1780/41126348740_1f4cdc13eb_b.jpg");
+}
+
+/*Stu*/
+
+.img30 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm1.staticflickr.com/895/28067893047_8ca53dc010_b.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img30:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm1.staticflickr.com/895/28067893047_8ca53dc010_b.jpg");
+}
+
+/*Ash*/
+
+.img31 {
+    width: 100%;
+    height: 100%;
+    background-image: url("https://farm2.staticflickr.com/1840/28067899017_2b6f160240_b.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.img31:hover {
+    background-image: linear-gradient(rgba(102,204,153,0.4), rgba(102,204,153,0.4)), url("https://farm2.staticflickr.com/1840/28067899017_2b6f160240_b.jpg");
+}
+
 .modal {
     display: none;   
     position: fixed; /* Stay in place */
